# voispark-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: publish.yml
.github/workflows/: publish-manual.yml  publish.yml
app/: main.py
app/api/: conversation.py  tts.py  voice_changer.py  voice_clone.py  voices.py
app/msg/: base_resp.py  history_msg.py
src/voispark_mcp/: __init__.py  __main__.py  main.py
src/voispark_mcp/api/: conversation.py  history.py  tts.py  voice_changer.py  voice_clone.py  voices.py
src/voispark_mcp/core/: api_request.py  error_code.py
src/voispark_mcp/msg/: audio_msg.py  base_resp.py  conversation_msg.py  history_msg.py  tts_msg.py  voice_changer_msg.py  voice_clone_msg.py  voices_msg.py
tests/: test_conversation.py  test_tts.py  test_voice_changer.py  test_voice_clone.py  test_voices.py
