[project]
name = "voispark-mcp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
]

[project.scripts]
voispark_mcp = "app.main:main"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
