[project]
name = "voispark-mcp"
version = "0.0.1"
description = "A Model Context Protocol (MCP) project for VoiSpark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
]

[project.scripts]
voispark-mcp = "voispark_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
